--- a/data-pipeline/pyproject.toml
+++ b/data-pipeline/pyproject.toml
@@ -12,20 +12,20 @@ python = "^3.10"
 fastapi = "^0.115.0"
 uvicorn = "^0.32.0"
 requests = "^2.32.4"
-aiohttp = "^3.10.0"
+aiohttp = "^3.12.13"
 asyncpg = "^0.30.0"
 ipfshttpclient = "^0.8.0a2"
 python-docx = "^1.1.0"
-PyPDF2 = "^3.0.0"
+pypdf = "^4.0.0"
 beautifulsoup4 = "^4.12.0"
 psycopg2-binary = "^2.9.9"
 redis = "^5.0.1"
 openai = "^1.58.0"
-sentence-transformers = "^2.7.0"
+sentence-transformers = "^3.4.1"
 numpy = "^1.26.0"
 pandas = "^2.2.0"
 pydantic = "^2.10.0"
-python-multipart = "^0.0.6"
+python-multipart = "^0.0.20"
 aiofiles = "^24.1.0"
 python-dotenv = "^1.0.0"
 structlog = "^24.1.0"
@@ -35,6 +35,12 @@ flower = "^2.0.1"
 pytest = "^8.2.0"
 pytest-asyncio = "^0.24.0"
 httpx = "^0.28.0"
+pyjwt = "^2.10.1"
+starlette = "^0.46.0"
+tornado = "^6.5.1"
+transformers = "^4.50.0"
+tqdm = "^4.0.0"
+langchain = "^0.1.14"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
