--- a/backend-verification-service/package.json
+++ b/backend-verification-service/package.json
@@ -51,6 +51,7 @@
     "@types/node": "^20.10.4",
     "@types/node-cron": "^3.0.11",
     "@types/pg": "^8.10.9",
+    "@types/superagent": "^8.1.9",
     "@types/supertest": "^2.0.16",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
