--- a/browser-extension/manifest.json
+++ b/browser-extension/manifest.json
@@ -4,9 +4,9 @@
   "version": "1.1.0",
   "description": "Fact-checks LLM output in real time with cryptographically-signed sources.",
   "icons": {
-    "16": "assets/icon16.png",
-    "48": "assets/icon48.png",
-    "128": "assets/icon128.png"
+    "16": "assets/icon16.svg",
+    "48": "assets/icon48.svg",
+    "128": "assets/icon128.svg"
   },
   "permissions": [
     "storage",
@@ -34,9 +34,9 @@
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
-      "16": "assets/icon16.png",
-      "48": "assets/icon48.png",
-      "128": "assets/icon128.png"
+      "16": "assets/icon16.svg",
+      "48": "assets/icon48.svg",
+      "128": "assets/icon128.svg"
     },
     "default_title": "Veritas AI Agent"
   },
