--- a/infra/k8s/backend-deployment.yaml
+++ b/infra/k8s/backend-deployment.yaml
@@ -27,18 +27,60 @@ data:
   IPFS_GATEWAY_URL: "https://ipfs.io"
   IPFS_API_URL: "https://ipfs.infura.io:5001/api/v0"
 ---
-apiVersion: v1
-kind: Secret
+# NOTE: This Secret should be created using external-secrets-operator or Secret Manager
+# DO NOT store actual secrets in this file
+# Example of how secrets should be created:
+#
+# kubectl create secret generic veritas-backend-secrets \
+#   --from-literal=DATABASE_URL="$DATABASE_URL" \
+#   --from-literal=REDIS_URL="$REDIS_URL" \
+#   --from-literal=OPENAI_API_KEY="$OPENAI_API_KEY" \
+#   --from-literal=VALID_API_KEYS="$VALID_API_KEYS" \
+#   --namespace=veritas
+#
+# Or use external-secrets-operator with Google Secret Manager:
+apiVersion: external-secrets.io/v1beta1
+kind: SecretStore
+metadata:
+  name: veritas-secret-store
+  namespace: veritas
+spec:
+  provider:
+    gcpsm:
+      projectId: "veritas-project"
+      auth:
+        workloadIdentity:
+          clusterLocation: us-central1
+          clusterName: veritas-gke-prod
+          serviceAccountRef:
+            name: veritas-backend-sa
+---
+apiVersion: external-secrets.io/v1beta1
+kind: ExternalSecret
 metadata:
   name: veritas-backend-secrets
   namespace: veritas
-type: Opaque
-data:
-  # These should be populated from Secret Manager in production
-  DATABASE_URL: "cG9zdGdyZXNxbDovL3Zlcml0YXM6cGFzc3dvcmRAcG9zdGdyZXMtcHJvZC12ZXJpdGFzLXByb2plY3Q6NTQzMi92ZXJpdGFz"
-  REDIS_URL: "cmVkaXM6Ly9yZWRpcy1wcm9kLXZlcml0YXMtcHJvamVjdDo2Mzc5"
-  OPENAI_API_KEY: "c2stZXhhbXBsZQ=="
-  VALID_API_KEYS: "dmVyaXRhcy1hcGkta2V5LTEscmVzZWFyY2hlci1rZXktMSxkZXZlbG9wZXIta2V5LTE="
+spec:
+  refreshInterval: 1h
+  secretStoreRef:
+    name: veritas-secret-store
+    kind: SecretStore
+  target:
+    name: veritas-backend-secrets
+    creationPolicy: Owner
+  data:
+  - secretKey: DATABASE_URL
+    remoteRef:
+      key: veritas-db-password
+  - secretKey: REDIS_URL
+    remoteRef:
+      key: veritas-redis-url
+  - secretKey: OPENAI_API_KEY
+    remoteRef:
+      key: veritas-openai-key
+  - secretKey: VALID_API_KEYS
+    remoteRef:
+      key: veritas-api-keys
 ---
 apiVersion: apps/v1
 kind: Deployment
