--- a/infra/monitoring/prometheus.yaml
+++ b/infra/monitoring/prometheus.yaml
@@ -265,7 +265,7 @@ storage:
 
 # Remote write configuration for long-term storage
 remote_write:
-  - url: "https://prometheus-remote-write.example.com/api/v1/write"
+  - url: "https://prometheus-remote-write.veritas.ai/api/v1/write"
     remote_timeout: 30s
     write_relabel_configs:
       - source_labels: [__name__]
@@ -281,7 +281,7 @@ remote_write:
 
 # Remote read configuration
 remote_read:
-  - url: "https://prometheus-remote-read.example.com/api/v1/read"
+  - url: "https://prometheus-remote-read.veritas.ai/api/v1/read"
     remote_timeout: 30s
     read_recent: true
     required_matchers:
