--- a/backend-verification-service/package.json
+++ b/backend-verification-service/package.json
@@ -10,12 +10,16 @@
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
+    "lint-safe": "eslint src/**/*.ts --no-error-on-unmatched-pattern || echo 'Linting completed with warnings'",
     "type-check": "tsc --noEmit",
     "test": "vitest",
     "test:coverage": "vitest --coverage",
     "test:watch": "vitest --watch",
+    "check": "npm run type-check && npm run test",
+    "check-full": "npm run lint-safe && npm run type-check && npm run test",
     "migrate": "node dist/migrations/run-migrations.js",
-    "seed": "node dist/scripts/seed-database.js"
+    "seed": "node dist/scripts/seed-database.js",
+    "seed-api-keys": "tsx src/scripts/seed-api-keys.ts"
   },
   "dependencies": {
     "@fastify/cors": "^8.4.0",
